add x_white_line block

--- a/src/main/resources/assets/road-marking-mod/lang/en_us.json
+++ b/src/main/resources/assets/road-marking-mod/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "block.road-marking-mod.x_white_line": "X Type White Line",
   "block.road-marking-mod.white_line": "White Line",
   "block.road-marking-mod.white_line_old1": "White Line Old 1",
   "block.road-marking-mod.white_line_old2": "White Line Old 2",
