--- a/src/main/resources/assets/road-marking-mod/lang/zh_cn.json
+++ b/src/main/resources/assets/road-marking-mod/lang/zh_cn.json
@@ -1,4 +1,5 @@
 {
+  "block.road-marking-mod.x_white_line": "X型 石头白线",
   "block.road-marking-mod.white_line": "石头白线",
   "block.road-marking-mod.white_line_old1": "石头白线 老化1",
   "block.road-marking-mod.white_line_old2": "石头白线 老化2",
